--- a/Crypto_Scraping.ipynb
+++ b/Crypto_Scraping.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Webscraping Coi"
+    "## Webscraping Coinbase API"
    ]
   },
   {
